--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "@vitejs/plugin-react": "^4.3.2",
     "tailwindcss": "^4.0.0",
     "vite": "^7.1.3",
-    "vite-plugin-pwa": "^1.0.2",
-    "sharp": "^0.34.3",
-    "to-ico": "^1.0.1"
+    "vite-plugin-pwa": "^1.0.2"
   },
   "engines": {
     "node": ">=18"
   }
 }
+
 
